set global scrollbar fix, exclude layout when resetting filters

--- a/carbonmark/theme/globals.css
+++ b/carbonmark/theme/globals.css
@@ -6,3 +6,15 @@ a:hover,
 a:visited {
   color: var(--bright-blue);
 }
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--surface-04);
+  border: 0.4rem solid transparent;
+  border-radius: 0.8rem;
+  background-clip: padding-box;
+  outline-offset: -1px;
+}
+
+::-webkit-scrollbar {
+  width: 1.6rem;
+}
